--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
